test/extension_test_cases/valid/dynamic/dynamicnull.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
j := null ;
println j ;
j := 5 ;
println j ;
c := newpair(null, null) ;
fst c = 1 ;
snd c = 'a' ;
println c ;
exit 0
end
